# VU_Dynamics_assignment

reid-identical-objects/: main.py  requirements.txt  tracker.py  utils.py
swarm_sim/: CMakeLists.txt  package.xml
swarm_sim/config/: detector.yaml
swarm_sim/launch/: spawn_and_run.launch  spawn_drones.launch
swarm_sim/models/: model.sdf
swarm_sim/models/drone_model/: model.sdf
swarm_sim/scripts/: run.sh
swarm_sim/src/: controller_node.py  coordinator_node.py  detector_node.py  takeoff_manager.py  tracker_node.py
swarm_sim/worlds/: swarm_world.world
swarm_simulation/: CMakeLists.txt  package.xml
swarm_simulation/launch/: spawn_and_nodes.launch  swarm_world.launch
swarm_simulation/params/: swarm_params.yaml
swarm_simulation/scripts/: detection_node.py  formation_controller.py  swarm_manager.py
swarm_simulation/urdf/: simple_drone.urdf
swarm_simulation/worlds/: swarm_world.world
uav_tank_sim/: controller.py  detector.py  main.py  requirements.txt  tracker.py  utils.py
