<?xml version="1.0"?>
<package format="2">
  <name>swarm_sim</name>
  <version>0.0.1</version>
  <description>Drone swarm simulation using ROS + Gazebo</description>
  <maintainer email="naveen@example.com">Naveen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
</package>
