<?xml version="1.0"?>
<package format="2">
  <name>swarm_simulation</name>
  <version>0.0.1</version>
  <description>Simple ROS+Gazebo swarm simulation for assignment (Naveen Kumar Reddy)</description>
  <maintainer email="you@example.com">Naveen Kumar Reddy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
</package>
